# textToBin

./: CMakeLists.txt  README.md  buildfiles.cpp  buildfiles.hpp  main.cpp  progopt.cpp  progopt.hpp
